--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <title>Gathering Robert Adams</title>
     <script src="https://cdn.jsdelivr.net/gh/alvinashiatey/Sheets@latest/dist/sheets.umd.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+        li {
+          margin-bottom: 15px;
+        }
+        li.pointer {
+          cursor: pointer;
+        }
+        li:hover {
+          background-color: #ccc;
+        }
+      </style>
 </head>
     <body>
         <p style="width: 400px;">*Gathering Robert Adams* <br>
@@ -24,6 +35,10 @@ Adams' goal was to document what Americans bought, paid for, and couldn't. "They
                 </div>
             </div>
         </div>
+
+        <div class="cursors">
+            <div class="none">none</div>
+
         <script>
             const sheetID = "1v1Vzv_85Q4tBf9EXoAvCp7nkQVPhieapuhWnk6ngAFs";
             const page = document.querySelector(".page");
